Continued templating and added TODOs

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,6 +10,25 @@
     <title>Server Calculator</title>
 </head>
 <body>
+    <header>
+        <h1>Server Calculator</h1>
+    </header>
+    <main>
+        <section id="calculator">
+            <input/> <!-- Put result back into the input somehow-->
+            <button id="add" class="operator">+</button>
+            <button id="subtract" class="operator">-</button>
+            <button id="multiply" class="operator">x</button>
+            <button id="divide" class="operator">÷</button>
+            <button id="equals" class="operator">=</button>
+            <button id="clear">C</button>
+        </section>
+        <section id="historyTable">
+            <table>
+                <tbody id="artistTableBody"></tbody>
+            </table>
+        </section>
+    </main>
     
 </body>
 </html>
