--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,17 +15,28 @@
     </header>
     <main>
         <section id="calculator">
-            <input/> <!-- Put result back into the input somehow-->
+            <h2 id="display"></h2> <!-- Put result back into the input somehow-->
             <button id="add" class="operator">+</button>
-            <button id="subtract" class="operator">-</button>
-            <button id="multiply" class="operator">x</button>
-            <button id="divide" class="operator">÷</button>
-            <button id="equals" class="operator">=</button>
+            <button id="subtract" class="button operator">-</button>
+            <button id="multiply" class="button operator">x</button>
+            <button id="divide" class="button operator">÷</button>
+            <button id="equals" class="button operator">=</button>
             <button id="clear">C</button>
+            <button class="button number">9</button>
+            <button class="button number">8</button>
+            <button class="button number">7</button>
+            <button class="button number">6</button>
+            <button class="button number">5</button>
+            <button class="button number">4</button>
+            <button class="button number">3</button>
+            <button class="button number">2</button>
+            <button class="button number">1</button>
+            <button class="button number">.</button>
+            <button class="button number">0</button>
         </section>
         <section id="historyTable">
             <table>
-                <tbody id="artistTableBody"></tbody>
+                <tbody id="historyTableBody"></tbody>
             </table>
         </section>
     </main>
