Created logic to prevent two operators being entered in a row

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -16,11 +16,11 @@
     <main>
         <section id="calculator">
             <h2 id="display"></h2> <!-- Put result back into the input somehow-->
-            <button id="add" class="operator">+</button>
+            <button id="add" class="button operator">+</button>
             <button id="subtract" class="button operator">-</button>
             <button id="multiply" class="button operator">x</button>
             <button id="divide" class="button operator">÷</button>
-            <button id="equals" class="button operator">=</button>
+            <button id="equals" class="operator">=</button>
             <button id="clear">C</button>
             <button class="button number">9</button>
             <button class="button number">8</button>
