Added positive/negative number support

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -20,6 +20,7 @@
             <button id="subtract" class="button operator">-</button>
             <button id="multiply" class="button operator">x</button>
             <button id="divide" class="button operator">÷</button>
+            <button id="positiveNegative" class="button posNeg operator">+/-</button>
             <button id="equals" class="operator">=</button>
             <button id="clear">C</button>
             <button class="button number">9</button>
