--- a/server/public/index.html
+++ b/server/public/index.html
@@ -32,7 +32,7 @@
             <button class="button number">3</button>
             <button class="button number">2</button>
             <button class="button number">1</button>
-            <button class="button number">.</button>
+            <button class="button decimal number">.</button>
             <button class="button number">0</button>
         </section>
         <section id="historyTable">
