Added server-side removal of hanging symbols

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -15,7 +15,7 @@
     </header>
     <main>
         <section id="calculator">
-            <h2 id="display"></h2> <!-- Put result back into the input somehow-->
+            <h2 id="display">0</h2> <!-- Put result back into the input somehow-->
             <button id="add" class="button operator">+</button>
             <button id="subtract" class="button operator">-</button>
             <button id="multiply" class="button operator">x</button>
