Implemented clear display button and clear history button functionality

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -34,6 +34,7 @@
             <button class="button number">1</button>
             <button class="button decimal number">.</button>
             <button class="button number">0</button>
+            <button id="clearHistory">Clear History</button>
         </section>
         <section id="historyTable">
             <table>
