--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,31 +10,47 @@
     <title>Server Calculator</title>
 </head>
 <body>
-    <header>
-        <h1>Server Calculator</h1>
+    <header class="header">
+        <h1 class="headerOne">Server Calculator</h1>
     </header>
     <main>
-        <section id="calculator">
-            <h2 id="display">0</h2> <!-- Put result back into the input somehow-->
-            <button id="add" class="button operator">+</button>
-            <button id="subtract" class="button operator">-</button>
-            <button id="multiply" class="button operator">x</button>
-            <button id="divide" class="button operator">÷</button>
-            <button id="positiveNegative" class="button posNeg operator">+/-</button>
-            <button id="equals" class="operator">=</button>
-            <button id="clear">C</button>
-            <button class="button number">9</button>
-            <button class="button number">8</button>
-            <button class="button number">7</button>
-            <button class="button number">6</button>
-            <button class="button number">5</button>
-            <button class="button number">4</button>
-            <button class="button number">3</button>
-            <button class="button number">2</button>
-            <button class="button number">1</button>
-            <button class="button decimal number">.</button>
-            <button class="button number">0</button>
-            <button id="clearHistory">Clear History</button>
+        <section class="calculations">
+            <section id="calculator">
+                <h2 id="display">0</h2> <!-- Put result back into the input somehow-->
+                <section>
+                    <button id="divide" class="button operator">÷</button>
+                    <button id="multiply" class="button operator">x</button>
+                    <button id="subtract" class="button operator">-</button>
+                    <button id="add" class="button operator">+</button>
+                </section>
+                <section class="wrapper">
+                    <section>
+                        <button class="button number">9</button>
+                        <button class="button number">8</button>
+                        <button class="button number">7</button>
+                        <button class="button number">6</button>
+                        <button class="button number">5</button>
+                        <button class="button number">4</button>
+                    </section>
+                    <section>
+                        <button id="positiveNegative" class="button posNeg operator">+/-</button>
+                    </section>
+                </section>
+                <section class="wrapper bottom">
+                    <section>
+                        <button class="button number">3</button>
+                        <button class="button number">2</button>
+                        <button id="one" class="button number">1</button>
+                        <button id="zero" class="button number">0</button>
+                        <button class="button decimal number">.</button>
+                        <button id="clear">C</button>
+                    </section>
+                    <section>
+                        <button id="equals" class="operator">=</button>
+                    </section>
+                </section>
+                <button id="clearHistory">Clear History</button>
+            </section>
         </section>
         <section id="historyTable">
             <table>
