Flex-formatted page contents

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -52,11 +52,14 @@
                 <button id="clearHistory">Clear History</button>
             </section>
         </section>
-        <section id="historyTable">
-            <table>
-                <tbody id="historyTableBody"></tbody>
-            </table>
-        </section>
+            <section id="historyTable" class="historySection">
+                <table>
+                    <thead>
+                        <th>Calculation History:</th>
+                    </thead>
+                    <tbody id="historyTableBody"></tbody>
+                </table>
+            </section>
     </main>
     
 </body>
